DDBNEXT-876: Layout issues public favorite page

--- a/web-app/css/favorites.css
+++ b/web-app/css/favorites.css
@@ -103,7 +103,10 @@ hr {
   text-align: right;
   display: inline-block;
   float: right;
-  margin-top: 20px;
+}
+
+.public-favorites .results-paginator-options {
+  margin-top: 20px !important;
 }
 
 .favorites-results-container .page-filter,.sort-results-switch {
@@ -193,6 +196,10 @@ hr {
 
 .public-favorites .results-sorter {
   padding-left: 10px;
+}
+
+.public-favorites .summary-main-wrapper .summary-main, .public-favorites .summary-main-wrapper .extra {
+  margin-left: 0px !important;
 }
 
 .results-sorter .select-all {
@@ -380,6 +387,7 @@ hr {
   margin-left: 36px;
 }
 
+
 .favorites-results .remove-item-check {
   position: absolute;
   left: 10px;
@@ -389,6 +397,12 @@ hr {
 .favorites-results-container .messages-container {
   margin-top: 7px;
 }
+
+.favorites-results-container .favorites-report {
+  background: url("../images/icons/objectviewer_actions.png") no-repeat -0px -222px;
+  padding-left: 25px;
+}
+
 
 .favorites-results .results-list .extra {
   margin-left: 36px;
@@ -618,11 +632,6 @@ hr {
   position: relative;
   padding: 0;
   margin: 0;
-}
-
-.folder-information-container .folder-information > ul li a {
-  text-decoration: underline;
-  color: #A5003B;
 }
 
 
